--- a/package.json
+++ b/package.json
@@ -3,27 +3,37 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "heroku-postbuild": "ng build --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.1",
+    "@angular/cli": "~11.0.2",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "express": "^4.17.1",
     "fomantic-ui": "^2.8.7",
     "fomantic-ui-css": "^2.8.7",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
